# VibingStorage

./: .gitignore  docker-compose.yml
vibing-storage/: Cargo.toml  Dockerfile  config.json
vibing-storage-web/: Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
vibing-storage-web/src/app/: layout.tsx  page.tsx
vibing-storage-web/src/app/about/: page.tsx
vibing-storage-web/src/app/admin/: page.tsx
vibing-storage-web/src/app/blog/: page.tsx
vibing-storage-web/src/app/home/: page.tsx
vibing-storage-web/src/components/: Footer.tsx  Header.tsx  Navbar.tsx  PageMonitor.tsx  SearchingPanel.tsx  TrackCard.tsx  VolumeSlider.tsx
vibing-storage-web/src/components/ui/: navbar.tsx  navigation-menu.tsx
vibing-storage-web/src/styles/: globals.css
vibing-storage/migrations/: 20250903174815_initial.down.sql  20250903174815_initial.up.sql  20250904005213_basic_data.down.sql  20250904005213_basic_data.up.sql
vibing-storage/src/: app.rs  config.rs  database.rs  lib.rs  main.rs
vibing-storage/src/app/: apis.rs  error.rs  fetch.rs  services.rs
vibing-storage/src/app/api/: delete.rs  get.rs  patch.rs  post.rs  put.rs
vibing-storage/src/app/apis/: get.rs
vibing-storage/src/app/services/: download.rs
vibing-storage/src/database/: entities.rs  error.rs
vibing-storage/src/database/core/: pool.rs
vibing-storage/src/database/entities/: track.rs  vibe.rs  vibe_group.rs
