[package]
name = "vibing-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
audiotags = "0.5.0"
tokio-util = { version = "0.7", features = ["io"] }

[features]
get_sample = []
init_db = []